# xattree

./: .gitignore  README.md  attrs_mypy.py  pyproject.toml  pytest.ini  todo.md
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/examples/: demo.py  quickstart.py
docs/md/: how.md  intro.md  quickstart.md  tldr.md  tut.md  tutorial.md  usage.md  wat.md  what.md  why.md
test/: test_array.py  test_attrs.py  test_basic.py  test_child.py  test_complex.py  test_converter.py  test_coord.py  test_dim.py  test_dims_coords.py  test_examples.py  test_medium.py  test_meta.py  test_metadata.py  test_nested2x_dim.py  test_nested_dim.py  test_validator.py  test_xattree.py
xattree/: __init__.py  version.py
