[project]
name = "xattree"
description = "attrs + xarray data tree = xattree"
readme = "README.md"
authors = [
    { name = "Wes Bonelli", email = "wbonelli@ucar.edu" },
    { name = "Michael Reno", email = "mreno@ucar.edu" },
    { name = "Marnix Kraus", email = "Marnix.Kraus@deltares.nl" },
]
maintainers = [
    { name = "Wes Bonelli", email = "wbonelli@ucar.edu" },
    { name = "Michael Reno", email = "mreno@ucar.edu" },
    { name = "Marnix Kraus", email = "Marnix.Kraus@deltares.nl" },
]
keywords = ["attrs", "cattrs", "xarray"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "cattrs",
    "numpy",
    "pandas>=2.0.0",
    "xarray>=2024.11.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["xattree[lint,test]"]
lint = ["ruff", "mypy"]
test = [
    "xattree[lint]",
    "coverage",
    "pytest!=8.1.0",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-cov",
    "jupyter",
    "jupytext",
    "ipython"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "jupyter",
    "jupytext",
    "nbsphinx",
    "ipython",
]

[project.scripts]
xattree = "xattree:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "docs",
    "xattree",
]
[tool.hatch.build.targets.wheel]
packages = ["xattree"]

[tool.hatch.version]
path = "xattree/version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["pyproject.toml", "xattree/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
select = [
    "D409", # pydocstyle - section-underline-matches-section-length
    "E",    # pycodestyle error
    "F",    # Pyflakes
    "I001", # isort - unsorted-imports
]
ignore = [
    "E701", # multiple-statements-on-one-line-colon
    "E731", # lambda-assignment
]

[tool.mypy]
mypy_path = "xattree"
plugins = [
    "attrs_mypy.py",
]
ignore_missing_imports = true
warn_unreachable = true